force-app/main/default/objects/EmailMessage/fields/CBK_IgnoreTrigger__c.field-meta.xml
<CustomField>
    <fullName>CBK_IgnoreTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBK_IgnoreTrigger</label>
    <type>Checkbox</type>
</CustomField>