force-app/main/default/objects/EmailMessage/fields/CBK_Second_Priority_Headers__c.field-meta.xml
<CustomField>
    <fullName>CBK_Second_Priority_Headers__c</fullName>
    <description>Campo para guardar los elementos del Header con segunda prioridad</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Campo para guardar los elementos del Header con segunda prioridad</inlineHelpText>
    <label>Second Priority Headers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>