force-app/main/default/objects/EmailMessage/fields/CBK_sfdcMessageId__c.field-meta.xml
<CustomField>
    <fullName>CBK_sfdcMessageId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>sfdcMessageId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>