force-app/main/default/objects/EmailMessage/fields/CC_Agrupador__c.field-meta.xml
<CustomField>
    <fullName>CC_Agrupador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agrupador</label>
    <referenceTo>CC_Agrupador__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>