force-app/main/default/objects/EmailMessage/fields/CC_Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Aplicacion__c</fullName>
    <defaultValue>&apos;CC Clientes&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Aplicación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>