force-app/main/default/objects/EmailMessage/fields/CC_Grupo_Colab__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Colab__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupo Colaborador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>