force-app/main/default/objects/EmailMessage/fields/CC_Interno__c.field-meta.xml
<CustomField>
    <fullName>CC_Interno__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>El mensaje de correo electrónico no se añadirá al histórico de mensajes que se incluye al final de los correos salientes dirigidos a clientes.</inlineHelpText>
    <label>Interno</label>
    <type>Checkbox</type>
</CustomField>