force-app/main/default/objects/EmailMessage/fields/CC_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>CC_Plantilla__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla</label>
    <length>100</length>
    <type>Text</type>
</CustomField>