force-app/main/default/objects/EmailMessage/fields/CC_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Procedencia__c</fullName>
    <description>Origen del email (Traslado colaborador o Remitir colaborador)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>