force-app/main/default/objects/EmailMessage/fields/CC_Segunda_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Segunda_Oficina__c</fullName>
    <description>Se informa la segunda oficina en un traslado o remitido</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segunda Oficina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>