force-app/main/default/objects/EmailMessage/fields/CSBD_Oportunidad_Id__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Oportunidad_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mensajes de correo electrónico</relationshipLabel>
    <relationshipName>Mensajes_de_correo_electr_nico</relationshipName>
    <type>Lookup</type>
</CustomField>