force-app/main/default/objects/EmailMessage/fields/CSBD_Solicitud_Documentacion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Solicitud_Documentacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de documentación</label>
    <type>Checkbox</type>
</CustomField>