force-app/main/default/objects/EmailMessage/fields/SAC_Alerta__c.field-meta.xml
<CustomField>
    <fullName>SAC_Alerta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para que cuando se mande un email debido a una SAC_Alerta, se vincule a esta</description>
    <label>Alerta</label>
    <referenceTo>SAC_Alerta__c</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>