force-app/main/default/objects/EmailMessage/fields/SAC_CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>SAC_CaseStatus__c</fullName>
    <description>Campo que se rellena con el estado del caso en el momento en el que se recibe el mail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado del caso</label>
    <length>30</length>
    <type>Text</type>
</CustomField>