force-app/main/default/objects/EmailMessage/fields/SAC_EnvioRedaccion__c.field-meta.xml
<CustomField>
    <fullName>SAC_EnvioRedaccion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Envío redacción</label>
    <length>50</length>
    <type>Text</type>
</CustomField>