force-app/main/default/objects/EmailMessage/fields/SAC_IDAdjuntos__c.field-meta.xml
<CustomField>
    <fullName>SAC_IDAdjuntos__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID de Adjuntos</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>