force-app/main/default/objects/EmailMessage/fields/SEG_HasAnexo__c.field-meta.xml
<CustomField>
    <fullName>SEG_HasAnexo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allowing to check if has attachments manually</description>
    <label>SEG_HasAnexo</label>
    <type>Checkbox</type>
</CustomField>